added EDIT CONFIGURATIONS comment